--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "-": "^0.0.1",
     "D": "^1.0.0",
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.2",
@@ -18,6 +19,7 @@
     "yup": "^0.32.9"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.11",
     "@types/uuid": "^8.3.0",
     "ts-node-dev": "^1.1.6",
