--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "-": "^0.0.1",
     "D": "^1.0.0",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "reflect-metadata": "^0.1.13",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/uuid": "^8.3.0",
